--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,18 +1,34 @@
 <html lang="es">
 	<head>
 		{{>head}}
+		<link href='https://fonts.googleapis.com/css?family=Open+Sans:700,600' rel='stylesheet' type='text/css'>
 	</head>
 	
 	<body>
 		{{>navbar}}
 		<main role="main" class="container">
 			<div class="starter-template">
-				<h1>EatApp</h1>
-				<p class="lead">
-					App for restaurants!!
-				</p>
+				<div class="jumbotron jumbotron-fluid">
+				  <div class="container">
+				    <h1 class="display-4">EatApp</h1>
+				    <p class="lead">App for restaurants!!</p>
+				  </div>
+				</div>
+				<div class="loginForm">
+					<form method="post" action="index.html">
+						<div class="box">
+							<h1>Inicia sesión</h1>
+							<input type="email" name="email" value="email" onFocus="field_focus(this, 'email');" onblur="field_blur(this, 'email');" class="email" /> 
+							<input type="password" name="email" value="email" onFocus="field_focus(this, 'email');" onblur="field_blur(this, 'email');" class="email" /> 
+							<a href="#"><div class="btnSignIn">Sign In</div></a> <!-- End Btn -->
+							<a href="#"><div id="btnSignUp">Sign Up</div></a> <!-- End Btn2 -->
+						</div> <!-- End Box -->
+					</form>
+					<p>Forgot your password? <u style="color:#f1c40f;">Click Here!</u></p>					
+				</div>
 			</div>
 		</main>
-		{{>footer}}	
+		{{>footer}}
+		<script src="js/login.js"></script>	
 	</body>
 </html>
