[WIP] Includes Login UC
Includes User and UserRepository and their tests. Thanks to this, the
system has now a JPA database for Users.

Fixes interaction between index and login view. Mapping between views is
completle.

LoginController and the test is WIP.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,12 +15,13 @@
 				  </div>
 				</div>
 				<div class="loginForm">
-					<form method="post" action="index.html">
+					<form method="post" action="login">
 						<div class="box">
-							<h1>Inicia sesión</h1>
-							<input type="email" name="email" value="email" onFocus="field_focus(this, 'email');" onblur="field_blur(this, 'email');" class="email" /> 
-							<input type="password" name="email" value="email" onFocus="field_focus(this, 'email');" onblur="field_blur(this, 'email');" class="email" /> 
-							<a href="#"><div class="btnSignIn">Sign In</div></a> <!-- End Btn -->
+							<h1>Inicia sesion</h1>
+							<input type="email" name="email" value="a@a.com" onFocus="field_focus(this, 'email');" onblur="field_blur(this, 'email');" class="email" /> 
+							<input type="password" name="password" value="password" onFocus="field_focus(this, 'email');" onblur="field_blur(this, 'email');" class="email" /> 
+							<!-- <a href="#"><div class="btnSignIn">Sign In</div></a> <!-- End Btn -->
+							<button class="btn btn-success" type="submit">Guardar</button>
 							<a href="#"><div id="btnSignUp">Sign Up</div></a> <!-- End Btn2 -->
 						</div> <!-- End Box -->
 					</form>
