Fixes index view

--- a/src/main/resources/templates/base/head.html
+++ b/src/main/resources/templates/base/head.html
@@ -3,6 +3,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico"> <!--  TODO -->
+    <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet'>
 
     <title>EatApp</title>
     <!-- Bootstrap core CSS -->
