--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -4,6 +4,27 @@ body {
   padding-top: 5rem;
 }
 
+.page {
+  background: white;
+  height: 100%;
+}
+
+.main {
+  background: #87CEEB;
+  height: 100%;
+}
+
+.jumbotron {
+  margin-top: 5%;
+  background: #000000;
+  border-radius: 50px;
+}
+
+.title {
+  color: red;
+  font-family: lobster;
+}
+
 .starter-template {
   padding: 3rem 1.5rem;
   text-align: center;
@@ -28,7 +49,7 @@ h1{
   width:300px;
   border-radius:6px;
   margin: 0 auto 0 auto;
-  padding:0px 0px 70px 0px;
+  padding:20px 0px 20px 0px;
   border: #2980b9 4px solid; 
 }
 
@@ -38,10 +59,11 @@ h1{
   border-bottom: #ccc 2px solid;
   padding: 8px;
   width:250px;
-  color:#AAAAAA;
+  color: black;
   margin-top:10px;
   font-size:1em;
   border-radius:4px;
+  margin-bottom: 2%;
 }
 
 .password{
@@ -51,47 +73,8 @@ h1{
   padding: 8px;
   width:250px;
   font-size:1em;
-}
-
-.#btnSignIn{
-  background:#2ecc71;
-  width:125px;
-  padding-top:5px;
-  padding-bottom:5px;
-  color:white;
-  border-radius:4px;
-  border: #27ae60 1px solid;
-  
-  margin-top:20px;
-  margin-bottom:20px;
-  float:left;
-  margin-left:16px;
-  font-weight:800;
-  font-size:0.8em;
-}
-
-.#btnSignIn:hover{
-  background:#2CC06B; 
-}
-
-#btnSignUp{
-  float:left;
-  background:#3498db;
-  width:125px;  padding-top:5px;
-  padding-bottom:5px;
-  color:white;
-  border-radius:4px;
-  border: #2980b9 1px solid;
-  
-  margin-top:20px;
-  margin-bottom:20px;
-  margin-left:10px;
-  font-weight:800;
-  font-size:0.8em;
-}
-
-#btnSignUp:hover{ 
-background:#3594D2; 
+  margin-bottom: 10%;
+  color: black;
 }
 
 <!-- End Login -->
