Adds mainUserView and logoutView
TODO: Why <a> are not working?

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -4,9 +4,15 @@ body {
   padding-top: 5rem;
 }
 
+h1, h2 {
+  font-family: lobster;
+  color: #000000;
+}
+
 .page {
-  background: white;
+  background: #FFFFFF;
   height: 100%;
+  margin-top: 2%;
 }
 
 .main {
