--- a/src/main/resources/templates/base/navbar.html
+++ b/src/main/resources/templates/base/navbar.html
@@ -24,5 +24,12 @@
             </div>
           </li>
         </ul>
+        {{#email}}
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/logout">{{email}} Cerrar sesión <span class="sr-only">(current)</span></a><!-- TODO modify current with javascript -->
+          </li>
+        </ul>
+		{{/email}}
       </div>
     </nav>
