Includes UserType and refactors WebMediator to View
Includes the database schema updated with new column in User table
	Column name = type
	Column type = int

TO-DO:
- Common view for LoginView and LogoutView
- TestCases for different userTypes

--- a/src/main/resources/templates/mainUserView.html
+++ b/src/main/resources/templates/mainUserView.html
@@ -10,18 +10,18 @@
 	<div class="page">
 		<main role="main" class="main container">
 			<div class="starter-template">
-				{{#typeCommensal}}
+				{{#userTypeCommensal}}
 					{{>./mainCommensalView}}
-				{{/typeCommensal}}
-				{{#typeCook}}
+				{{/userTypeCommensal}}
+				{{#userTypeCook}}
 					{{>./mainCookView}}
-				{{/typeCook}}
-				{{#typeWaiter}}
+				{{/userTypeCook}}
+				{{#userTypeWaiter}}
 					{{>./mainWaiterView}}
-				{{/typeWaiter}}
-				{{#typeAdmin}}
+				{{/userTypeWaiter}}
+				{{#userTypeAdmin}}
 					{{>./mainAdminView}}
-				{{/typeAdmin}}
+				{{/userTypeAdmin}}
 			</div>
 		</main>
 	</div>
