--- a/src/main/resources/templates/mainUserView.html
+++ b/src/main/resources/templates/mainUserView.html
@@ -8,7 +8,7 @@
 <body>
 	{{>base/navbar}}
 	<div class="page">
-		<main role="main" class="main container">
+		<main role="main" class="main container col-xl col-lg col-md col-sm">
 			<div class="starter-template">
 				{{#COMMENSAL}}
 					{{>./mainCommensalView}}
