--- a/src/main/resources/templates/base/head.html
+++ b/src/main/resources/templates/base/head.html
@@ -2,7 +2,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico"> <!--  TODO -->
+    <link rel="icon" href="images/logo.png">
     <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet'>
 
     <title>EatApp</title>
