--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,9 +8,9 @@
 <body>
 	{{>base/navbar}}
 	<div class="page">
-		<main role="main" class="main container">
+		<main role="main" class="main container col-xl col-lg col-md col-sm">
 			<div class="starter-template">
-				<div class="jumbotron jumbotron-fluid">
+				<div class="jumbotron jumbotron-fluid col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xs-6 offset-3 float-md-center">
 					<div class="container">
 						<h1 class="title display-4">EatApp</h1>
 						<p class="title lead">App for restaurants!!</p>
