Adds Thymeleaf instead of mustache
Now, session can be passed to frontend and conditional checks can be done in frontend

--- a/src/main/resources/templates/mainUserView.html
+++ b/src/main/resources/templates/mainUserView.html
@@ -1,30 +1,32 @@
 <html lang="es">
 <head>
-{{>base/head}}
+<head th:insert="base/head"> </head>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:700,600'
 	rel='stylesheet' type='text/css'>
 </head>
 
 <body>
-	{{>base/navbar}}
+	<div th:insert="base/navbar.html"> </div>
 	<div class="page">
 		<main role="main" class="main container col-xl col-lg col-md col-sm">
 			<div class="starter-template">
-				{{#COMMENSAL}}
-					{{>./mainCommensalView}}
-				{{/COMMENSAL}}
-				{{#COOK}}
-					{{>./mainCookView}}
-				{{/COOK}}
-				{{#WAITER}}
-					{{>./mainWaiterView}}
-				{{/WAITER}}
-				{{#ADMIN}}
-					{{>./mainAdminView}}
-				{{/ADMIN}}
+				<th:block th:switch="${session.type}">
+					<div th:case="'COMMENSAL'">
+						<div th:insert="mainCommensalView.html"></div>
+					</div>
+					<div th:case="'ADMIN'">
+						<div th:insert="mainAdminView.html"></div>
+					</div>
+					<div th:case="'COOK'">
+						<div th:insert="mainCookView.html"></div>
+					</div>
+					<div th:case="'WAITER'">
+						<div th:insert="mainWaiterView.html"></div>
+					</div>
+				</th:block>
 			</div>
 		</main>
 	</div>
-	{{>base/footer}}
+	<footer th:insert="base/footer.html"> </footer>
 </body>
 </html>
