--- a/src/main/resources/templates/base/head.html
+++ b/src/main/resources/templates/base/head.html
@@ -9,3 +9,5 @@
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:700,600'
+	rel='stylesheet' type='text/css'>
