--- a/src/main/resources/templates/base/navbar.html
+++ b/src/main/resources/templates/base/navbar.html
@@ -21,12 +21,10 @@
             </div>
           </li>
         </ul>
-        {{#email}}
-        <ul class="navbar-nav ml-auto">
+       	<ul th:if="${session.email}" class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/logout">{{email}} Cerrar sesión <span class="sr-only">(current)</span></a><!-- TODO modify current with javascript -->
+            <a th:text="${session.email} + ' Cerrar sesión'" class="nav-link" href="/logout"><span class="sr-only">(current)</span></a><!-- TODO modify current with javascript -->
           </li>
-        </ul>
-		{{/email}}
+		</ul>
       </div>
     </nav>
