--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,23 +1,21 @@
 <html lang="es">
 <head>
-{{>base/head}}
+<head th:insert="base/head"> </head>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:700,600'
 	rel='stylesheet' type='text/css'>
 </head>
 
 <body>
-	{{>base/navbar}}
+	<div th:insert="base/navbar.html"> </div>
 	<div class="page">
 		<main role="main" class="main container col-xl col-lg col-md col-sm">
 			<div class="starter-template">
-				{{#error}}
-					<div class="alert alert-danger" role="alert">
-						{{error}}
-					</div>
-				{{/error}}
+				<div th:if="${error}" class="alert alert-danger" role="alert">
+					<p th:text="${error}"></p>
+				</div>
 			</div>
 		</main>
 	</div>
-	{{>base/footer}}
+	<footer th:insert="base/footer.html"> </footer>
 </body>
 </html>
