--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,12 +1,7 @@
 <html lang="es">
-<head>
-{{>base/head}}
-<link href='https://fonts.googleapis.com/css?family=Open+Sans:700,600'
-	rel='stylesheet' type='text/css'>
-</head>
-
+<head th:insert="base/head"> </head>
 <body>
-	{{>base/navbar}}
+	<div th:insert="base/navbar.html"> </div>
 	<div class="page">
 		<main role="main" class="main container col-xl col-lg col-md col-sm">
 			<div class="starter-template">
@@ -26,11 +21,9 @@
 							<input type="password" name="password" placeholder="password"
 								onFocus="field_focus(this, 'email');"
 								onblur="field_blur(this, 'email');" class="password" />
-							{{#error}}
-							<div class="alert alert-danger" role="alert">
-								{{error}}
+							<div th:if="${error}" class="alert alert-danger" role="alert">
+								<p th:text="${error}"></p>
 							</div>
-							{{/error}}
 							<button class="btn btn-success" type="submit">Entrar</button>
 						</div>
 						<!-- End Box -->
@@ -42,6 +35,6 @@
 			</div>
 		</main>
 	</div>
-	{{>base/footer}}
+	<footer th:insert="base/footer.html"> </footer>
 </body>
 </html>
