--- a/src/main/resources/templates/logout.html
+++ b/src/main/resources/templates/logout.html
@@ -1,12 +1,11 @@
 <html lang="es">
-<head>
-{{>base/head}}
+<head th:insert="base/head"> </head>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:700,600'
 	rel='stylesheet' type='text/css'>
 </head>
 
 <body>
-	{{>base/navbar}}
+	<div th:insert="base/navbar.html"> </div>
 	<div class="page">
 		<main role="main" class="main container">
 			<div class="starter-template">
@@ -20,6 +19,6 @@
 			</div>
 		</main>
 	</div>
-	{{>base/footer}}
+	<footer th:insert="base/footer.html"> </footer>
 </body>
 </html>
