--- a/src/main/resources/templates/base/navbar.html
+++ b/src/main/resources/templates/base/navbar.html
@@ -1,30 +1,34 @@
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="/">EatApp</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
 
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="/testStatic.html">Test Static</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li>
-        </ul>
-       	<ul th:if="${session.email}" class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a th:text="${session.email} + ' Cerrar sesión'" class="nav-link" href="/logout"><span class="sr-only">(current)</span></a><!-- TODO modify current with javascript -->
-          </li>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+	<a class="navbar-brand" href="/">EatApp</a>
+	<button class="navbar-toggler" type="button" data-toggle="collapse"
+		data-target="#navbarsExampleDefault"
+		aria-controls="navbarsExampleDefault" aria-expanded="false"
+		aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+
+	<div class="collapse navbar-collapse" id="navbarsExampleDefault">
+		<ul class="navbar-nav mr-auto">
+			<li class="nav-item"><a class="nav-link" href="/testStatic.html">Test
+					Static</a></li>
+			<li class="nav-item"><a class="nav-link disabled" href="#">Disabled</a>
+			</li>
+			<li class="nav-item dropdown"><a
+				class="nav-link dropdown-toggle" href="http://example.com"
+				id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
+				aria-expanded="false">Dropdown</a>
+				<div class="dropdown-menu" aria-labelledby="dropdown01">
+					<a class="dropdown-item" href="#">Action</a> <a
+						class="dropdown-item" href="#">Another action</a> <a
+						class="dropdown-item" href="#">Something else here</a>
+				</div></li>
 		</ul>
-      </div>
-    </nav>
+		<ul th:if="${session.email}" class="navbar-nav ml-auto">
+			<li class="nav-item"><a
+				th:text="${session.email} + ' Cerrar sesión'" class="nav-link"
+				href="/logout"><span class="sr-only">(current)</span></a>
+			<!-- TODO modify current with javascript --></li>
+		</ul>
+	</div>
+</nav>
