--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
 						<p class="title lead">App for restaurants!!</p>
 					</div>
 				</div>
-				<div class="loginForm">
+				<div th:unless="${session.email}" class="loginForm">
 					<form method="post" action="login">
 						<div class="box">
 							<h1>Bienvenido</h1>
