--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,9 +1,3 @@
-<!-- Global -->
-
-body {
-  padding-top: 5rem;
-}
-
 h1, h2 {
   font-family: lobster;
   color: #000000;
@@ -36,9 +30,6 @@ h1, h2 {
   text-align: center;
 }
 
-<!-- End Global -->
-
-<!-- Login -->
 p{
   font-size:12px;
   text-decoration: none;
@@ -83,4 +74,16 @@ h1{
   color: black;
 }
 
-<!-- End Login -->
+.mainOptions{
+  border-radius:10px;
+  background: white;
+  border: black 2px solid;
+  padding: 7%;
+  margin-top: 7%;
+}
+
+.intro{
+	margin-top: 5%;
+	font-size:3em;
+}
+
