--- a/src/main/resources/templates/mainAdminView.html
+++ b/src/main/resources/templates/mainAdminView.html
@@ -1,1 +1,11 @@
-<h1>Hola administrador <span th:text="${email}"></span></h1>
+<h1>Hola <span th:text="${session.email}"></span></h1>
+<hr>
+<h2 class="intro">¿Qué puedes hacer en EatApp?</h2>
+<div class="row col-xl-11 offset-xl-1 col-lg-11 offset-lg-1">
+	<div class="column mainOptions col-xl-5 col-lg-5 col-sm-12 float-md-center">
+		<a href="/">Registrar a un trabajador</a>
+	</div>
+	<div class="column mainOptions col-xl-5 col-lg-5 offset-lg-1 col-sm-12 ">
+		<a href="/logout">Cerrar sesión</a>
+	</div>
+</div>
