--- a/src/main/resources/templates/mainWaiterView.html
+++ b/src/main/resources/templates/mainWaiterView.html
@@ -1,1 +1,17 @@
-<h1>Hola camarero <span th:text="${email}"></span></h1>
+<h1>Hola <span th:text="${session.email}"></span></h1>
+<hr>
+<h2 class="intro">¿Qué puedes hacer en EatApp?</h2>
+<div class="row col-xl-11 offset-xl-1 col-lg-11 offset-lg-1">
+	<div class="column mainOptions col-xl-5 col-lg-5 col-sm-12 float-md-center">
+		<a href="/">Cancelar producto</a>
+	</div>
+	<div class="column mainOptions col-xl-5 offset-xl-1 col-lg-5 offset-lg-1  col-sm-12">
+			<a href="/">Gestionar status de producto</a>
+	</div>
+	<div class="column mainOptions col-xl-5 col-lg-5 col-sm-12">
+			<a href="/">Cancelar pedido</a>
+	</div>
+	<div class="column mainOptions col-xl-5 col-lg-5 offset-lg-1 col-sm-12 ">
+		<a href="/logout">Cerrar sesión</a>
+	</div>
+</div>
