Add registry in table with number code
TODO 1: checking of tables codes, tables in database and testing
TODO 2: Change to QR code

--- a/src/main/resources/templates/mainCommensalView.html
+++ b/src/main/resources/templates/mainCommensalView.html
@@ -6,7 +6,7 @@
 		<a href="">Gestionar métodos de pago</a>
 	</div>
 	<div class="column mainOptions col-xl-5 offset-xl-1 col-lg-5 offset-lg-1  col-sm-12">
-			<a href="/registryInTable">Registrarse en una mesa</a>
+			<a href="/registerInTable">Registrarse en una mesa</a>
 	</div>
 	<div class="column mainOptions col-xl-5 col-lg-5 col-sm-12">
 			<a href="/askForHelp">Ask for help</a>
