--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -87,3 +87,18 @@ h1{
 	font-size:3em;
 }
 
+.code{
+  background:#ecf0f1;
+  border: #ccc 1px solid;
+  border-bottom: #ccc 2px solid;
+  padding: 8px;
+  width:350px;
+  color: black;
+  margin-top:10px;
+  font-size:1em;
+  border-radius:4px;
+  margin-bottom: 2%;
+  text-align: center;
+  font-size: 50px;
+}
+
