--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,10 +15,10 @@
 					<form method="post" action="login">
 						<div class="box">
 							<h1>Bienvenido</h1>
-							<input type="email" name="email" placeholder="Email"
+							<input type="email" required="required" name="email" placeholder="Email"
 								onFocus="field_focus(this, 'email');"
 								onblur="field_blur(this, 'email');" class="email" />
-							<input type="password" name="password" placeholder="password"
+							<input type="password" required="required" name="password" placeholder="password"
 								onFocus="field_focus(this, 'email');"
 								onblur="field_blur(this, 'email');" class="password" />
 							<div th:if="${error}" class="alert alert-danger" role="alert">
