--- a/src/main/resources/templates/mainCommensalView.html
+++ b/src/main/resources/templates/mainCommensalView.html
@@ -5,7 +5,10 @@
 	<div class="column mainOptions col-xl-5 col-lg-5 col-sm-12 float-md-center">
 		<a href="">Gestionar métodos de pago</a>
 	</div>
-	<div class="column mainOptions col-xl-5 offset-xl-1 col-lg-5 offset-lg-1  col-sm-12">
+	<div th:if="${session.table}" class="column mainOptions col-xl-5 offset-xl-1 col-lg-5 offset-lg-1  col-sm-12">
+			<p th:text="'Estás registrado en la mesa ' + ${session.table}"></p>
+	</div>
+	<div th:unless="${session.table}" class="column mainOptions col-xl-5 offset-xl-1 col-lg-5 offset-lg-1  col-sm-12">
 			<a href="/registerInTable">Registrarse en una mesa</a>
 	</div>
 	<div class="column mainOptions col-xl-5 col-lg-5 col-sm-12">
