Adds QR reader in frontend TODO: Clean code TODO: Add table in db to check

--- a/src/main/resources/templates/registryInTable.html
+++ b/src/main/resources/templates/registryInTable.html
@@ -9,8 +9,10 @@
 	<div class="page">
 		<main role="main" class="main container col-xl col-lg col-md col-sm">
 			<div class="starter-template">
-				<form method="post" action="registerInTable">
-					<input type="number" required="required" name="code" min="1" max="100000" placeholder="Code" class="code" />
+				<form id="scanner" method="post" action="registerInTable">
+					<div id="reader" class="col-xl-12 col-lg-12 col-md-12 col-sm-12"></div>
+					<input type="number" required="required" name="code" min="1"
+						max="100000" placeholder="Code" class="code" id="code" />
 					<div th:if="${error}" class="alert alert-danger" role="alert">
 						<p th:text="${error}"></p>
 					</div>
