--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,103 +1,108 @@
 h1, h2 {
-  font-family: lobster;
-  color: #000000;
+	font-family: lobster;
+	color: #000000;
 }
 
 .page {
-  height: 100%;
-  margin-top: 2%;
+	height: 100%;
+	margin-top: 2%;
 }
 
 .main {
-  background: #CFE0F7;
-  height: 100%;
+	background: #CFE0F7;
+	height: 100%;
 }
 
 .jumbotron {
-  margin-top: 5%;
-  width: 50%;
-  background: #000000;
-  border-radius: 50px;
+	margin-top: 5%;
+	width: 50%;
+	background: #000000;
+	border-radius: 50px;
 }
 
 .title {
-  color: red;
-  font-family: lobster;
+	color: red;
+	font-family: lobster;
 }
 
 .starter-template {
-  padding: 3rem 1.5rem;
-  text-align: center;
+	padding: 3rem 1.5rem;
+	text-align: center;
 }
 
-p{
-  text-decoration: none;
-  color: black;
+p {
+	text-decoration: none;
+	color: black;
 }
 
-h1{
-  font-size:1.5em;
-  color:#525252;
+h1 {
+	font-size: 1.5em;
+	color: #525252;
 }
 
-.box{
-  background:white;
-  width:300px;
-  border-radius:6px;
-  margin: 0 auto 0 auto;
-  padding:20px 0px 20px 0px;
-  border: #2980b9 4px solid; 
+.box {
+	background: white;
+	width: 300px;
+	border-radius: 6px;
+	margin: 0 auto 0 auto;
+	padding: 20px 0px 20px 0px;
+	border: #2980b9 4px solid;
 }
 
-.email{
-  background:#ecf0f1;
-  border: #ccc 1px solid;
-  border-bottom: #ccc 2px solid;
-  padding: 8px;
-  width:250px;
-  color: black;
-  margin-top:10px;
-  font-size:1em;
-  border-radius:4px;
-  margin-bottom: 2%;
+.email {
+	background: #ecf0f1;
+	border: #ccc 1px solid;
+	border-bottom: #ccc 2px solid;
+	padding: 8px;
+	width: 250px;
+	color: black;
+	margin-top: 10px;
+	font-size: 1em;
+	border-radius: 4px;
+	margin-bottom: 2%;
 }
 
-.password{
-  border-radius:4px;
-  background:#ecf0f1;
-  border: #ccc 1px solid;
-  padding: 8px;
-  width:250px;
-  font-size:1em;
-  margin-bottom: 10%;
-  color: black;
+.password {
+	border-radius: 4px;
+	background: #ecf0f1;
+	border: #ccc 1px solid;
+	padding: 8px;
+	width: 250px;
+	font-size: 1em;
+	margin-bottom: 10%;
+	color: black;
 }
 
-.mainOptions{
-  border-radius:10px;
-  background: white;
-  border: black 2px solid;
-  padding: 7%;
-  margin-top: 7%;
+.mainOptions {
+	border-radius: 10px;
+	background: white;
+	border: black 2px solid;
+	padding: 7%;
+	margin-top: 7%;
 }
 
-.intro{
+.intro {
 	margin-top: 5%;
-	font-size:3em;
+	font-size: 3em;
 }
 
-.code{
-  background:#ecf0f1;
-  border: #ccc 1px solid;
-  border-bottom: #ccc 2px solid;
-  padding: 8px;
-  width:350px;
-  color: black;
-  margin-top:10px;
-  font-size:1em;
-  border-radius:4px;
-  margin-bottom: 2%;
-  text-align: center;
-  font-size: 50px;
+.code {
+	background: #ecf0f1;
+	border: #ccc 1px solid;
+	border-bottom: #ccc 2px solid;
+	padding: 8px;
+	width: 350px;
+	color: black;
+	margin-top: 10px;
+	font-size: 1em;
+	border-radius: 4px;
+	margin-bottom: 2%;
+	text-align: center;
+	font-size: 50px;
 }
 
+#reader {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
