--- a/src/main/resources/templates/base/footer.html
+++ b/src/main/resources/templates/base/footer.html
@@ -1,5 +1,23 @@
-    <!-- Bootstrap core JavaScript
+
+<!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/jquery-3.2.1.slim.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="js/jquery-3.2.1.slim.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/html5-qrcode.min.js"></script>
+<script>
+	function onScanSuccess(qrCodeMessage) {
+		if (isNaN(qrCodeMessage)) {
+			alert("QR no válido");
+			return;
+		}
+		document.getElementById("code").value = qrCodeMessage;
+		document.getElementById("scanner").submit();
+	}
+
+	var html5QrcodeScanner = new Html5QrcodeScanner("reader", {
+		fps : 10,
+		qrbox : 250
+	});
+	html5QrcodeScanner.render(onScanSuccess);
+</script>
