--- a/src/main/resources/templates/mainWaiterView.html
+++ b/src/main/resources/templates/mainWaiterView.html
@@ -1,17 +1,43 @@
-<h1>Hola <span th:text="${session.email}"></span></h1>
+<h1>
+	Hola <span th:text="${session.email}"></span>
+</h1>
 <hr>
 <h2 class="intro">¿Qué puedes hacer en EatApp?</h2>
 <div class="row col-xl-11 offset-xl-1 col-lg-11 offset-lg-1">
-	<div class="column mainOptions col-xl-5 col-lg-5 col-sm-12 float-md-center">
+	<div class="column mainOptions col-xl-5 col-lg-5 col-sm-12">
+		<div th:if="${notifications}" class="alert alert-danger" role="alert">
+			<table>
+				<tr th:each="notification: ${notifications}">
+					<td th:text="${notification.type}" />
+					<td th:text="${notification.owner}" />
+				</tr>
+			</table>
+			<form id="notification" method="post" action="showNotification">
+			<div>
+				<button class="btn btn-success" type="submit">Reload</button>
+			</div>
+		</form>
+		</div>
+	</div>
+	<div
+		class="column mainOptions col-xl-5 col-lg-5 col-sm-12 float-md-center">
 		<a href="/">Cancelar producto</a>
 	</div>
-	<div class="column mainOptions col-xl-5 offset-xl-1 col-lg-5 offset-lg-1  col-sm-12">
-			<a href="/">Gestionar status de producto</a>
+	<div
+		class="column mainOptions col-xl-5 offset-xl-1 col-lg-5 offset-lg-1  col-sm-12">
+		<a href="/">Gestionar status de producto</a>
 	</div>
 	<div class="column mainOptions col-xl-5 col-lg-5 col-sm-12">
-			<a href="/">Cancelar pedido</a>
+		<a href="/">Cancelar pedido</a>
 	</div>
-	<div class="column mainOptions col-xl-5 col-lg-5 offset-lg-1 col-sm-12 ">
+	<div
+		class="column mainOptions col-xl-5 col-lg-5 offset-lg-1 col-sm-12 ">
 		<a href="/logout">Cerrar sesión</a>
 	</div>
 </div>
+
+<script>
+	window.setTimeout(function() {
+		document.getElementById("scanner").submit();
+	}, 60000);
+</script>
