Refactor html views code

--- a/src/main/resources/templates/base/head.html
+++ b/src/main/resources/templates/base/head.html
@@ -12,4 +12,6 @@
 <!-- Bootstrap core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="css/style.css" rel="stylesheet" type="text/css">
-<link href="http://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css">
+<link
+	href="http://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css"
+	rel="stylesheet" type="text/css">
