--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,13 @@
 <html lang="es">
-<head th:insert="base/head"> </head>
+<head th:insert="base/head">
+</head>
 <body>
-	<div th:insert="base/navbar.html"> </div>
+	<div th:insert="base/navbar.html"></div>
 	<div class="page">
 		<main role="main" class="main container col-xl col-lg col-md col-sm">
 			<div class="starter-template">
-				<div class="jumbotron jumbotron-fluid col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xs-6 offset-3 float-md-center">
+				<div
+					class="jumbotron jumbotron-fluid col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xs-6 offset-3 float-md-center">
 					<div class="container">
 						<h1 class="title display-4">EatApp</h1>
 						<p class="title lead">App for restaurants!!</p>
@@ -15,11 +17,11 @@
 					<form method="post" action="login">
 						<div class="box">
 							<h1>Bienvenido</h1>
-							<input type="email" required="required" name="email" placeholder="Email"
-								onFocus="field_focus(this, 'email');"
-								onblur="field_blur(this, 'email');" class="email" />
-							<input type="password" required="required" name="password" placeholder="password"
-								onFocus="field_focus(this, 'email');"
+							<input type="email" required="required" name="email"
+								placeholder="Email" onFocus="field_focus(this, 'email');"
+								onblur="field_blur(this, 'email');" class="email" /> <input
+								type="password" required="required" name="password"
+								placeholder="password" onFocus="field_focus(this, 'email');"
 								onblur="field_blur(this, 'email');" class="password" />
 							<div th:if="${error}" class="alert alert-danger" role="alert">
 								<p th:text="${error}"></p>
