--- a/src/main/resources/templates/base/navbar.html
+++ b/src/main/resources/templates/base/navbar.html
@@ -27,8 +27,7 @@
 		<ul th:if="${session.email}" class="navbar-nav ml-auto">
 			<li class="nav-item"><a
 				th:text="${session.email} + ' Cerrar sesión'" class="nav-link"
-				href="/logout"><span class="sr-only">(current)</span></a>
-			<!-- TODO modify current with javascript --></li>
+				href="/logout"><span class="sr-only">(current)</span></a> <!-- TODO modify current with javascript --></li>
 		</ul>
 	</div>
 </nav>
