--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,12 +1,13 @@
 <html lang="es">
 <head>
-<head th:insert="base/head"> </head>
+<head th:insert="base/head">
+</head>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:700,600'
 	rel='stylesheet' type='text/css'>
 </head>
 
 <body>
-	<div th:insert="base/navbar.html"> </div>
+	<div th:insert="base/navbar.html"></div>
 	<div class="page">
 		<main role="main" class="main container col-xl col-lg col-md col-sm">
 			<div class="starter-template">
