--- a/src/main/resources/templates/logout.html
+++ b/src/main/resources/templates/logout.html
@@ -1,9 +1,10 @@
 <html lang="es">
-<head th:insert="base/head"> </head>
+<head th:insert="base/head">
+</head>
 </head>
 
 <body>
-	<div th:insert="base/navbar.html"> </div>
+	<div th:insert="base/navbar.html"></div>
 	<div class="page">
 		<main role="main" class="main container">
 			<div class="starter-template">
