--- a/src/main/resources/templates/mainCommensalView.html
+++ b/src/main/resources/templates/mainCommensalView.html
@@ -1,20 +1,26 @@
-<h1>Hola <span th:text="${session.email}"></span></h1>
+<h1>
+	Hola <span th:text="${session.email}"></span>
+</h1>
 <hr>
 <h2 class="intro">¿Qué puedes hacer en EatApp?</h2>
 <div class="row col-xl-11 offset-xl-1 col-lg-11 offset-lg-1">
-	<div class="column mainOptions col-xl-5 col-lg-5 col-sm-12 float-md-center">
+	<div
+		class="column mainOptions col-xl-5 col-lg-5 col-sm-12 float-md-center">
 		<a href="">Gestionar métodos de pago</a>
 	</div>
-	<div th:if="${session.table}" class="column mainOptions col-xl-5 offset-xl-1 col-lg-5 offset-lg-1  col-sm-12">
-			<p th:text="'Estás registrado en la mesa ' + ${session.table}"></p>
+	<div th:if="${session.table}"
+		class="column mainOptions col-xl-5 offset-xl-1 col-lg-5 offset-lg-1  col-sm-12">
+		<p th:text="'Estás registrado en la mesa ' + ${session.table}"></p>
 	</div>
-	<div th:unless="${session.table}" class="column mainOptions col-xl-5 offset-xl-1 col-lg-5 offset-lg-1  col-sm-12">
-			<a href="/registerInTable">Registrarse en una mesa</a>
+	<div th:unless="${session.table}"
+		class="column mainOptions col-xl-5 offset-xl-1 col-lg-5 offset-lg-1  col-sm-12">
+		<a href="/registerInTable">Registrarse en una mesa</a>
 	</div>
 	<div class="column mainOptions col-xl-5 col-lg-5 col-sm-12">
-			<a href="/askForHelp">Ask for help</a>
+		<a href="/askForHelp">Ask for help</a>
 	</div>
-	<div class="column mainOptions col-xl-5 col-lg-5 offset-lg-1 col-sm-12 ">
+	<div
+		class="column mainOptions col-xl-5 col-lg-5 offset-lg-1 col-sm-12 ">
 		<a href="/logout">Cerrar sesión</a>
 	</div>
 </div>
