--- a/src/main/resources/templates/mainCookView.html
+++ b/src/main/resources/templates/mainCookView.html
@@ -1,23 +1,29 @@
-<h1>Hola <span th:text="${session.email}"></span></h1>
+<h1>
+	Hola <span th:text="${session.email}"></span>
+</h1>
 <hr>
 <h2 class="intro">¿Qué puedes hacer en EatApp?</h2>
 <div class="row col-xl-11 offset-xl-1 col-lg-11 offset-lg-1">
-	<div class="column mainOptions col-xl-5 col-lg-5 col-sm-12 float-md-center">
+	<div
+		class="column mainOptions col-xl-5 col-lg-5 col-sm-12 float-md-center">
 		<a href="/registryInTable">Configurar compra</a>
 	</div>
-	<div class="column mainOptions col-xl-5 offset-xl-1 col-lg-5 offset-lg-1  col-sm-12">
-			<a href="/">Gestionar menú</a>
+	<div
+		class="column mainOptions col-xl-5 offset-xl-1 col-lg-5 offset-lg-1  col-sm-12">
+		<a href="/">Gestionar menú</a>
 	</div>
 	<div class="column mainOptions col-xl-5 col-lg-5 col-sm-12">
-			<a href="/">Gestionar status de ingredientes</a>
+		<a href="/">Gestionar status de ingredientes</a>
 	</div>
-	<div class="column mainOptions col-xl-5 col-lg-5 offset-lg-1 col-sm-12 ">
+	<div
+		class="column mainOptions col-xl-5 col-lg-5 offset-lg-1 col-sm-12 ">
 		<a href="/logout">Cancelar producto</a>
 	</div>
 	<div class="column mainOptions col-xl-5 col-lg-5 col-sm-12">
-			<a href="/">Gestionar status de producto</a>
+		<a href="/">Gestionar status de producto</a>
 	</div>
-	<div class="column mainOptions col-xl-5 col-lg-5 offset-lg-1 col-sm-12 ">
+	<div
+		class="column mainOptions col-xl-5 col-lg-5 offset-lg-1 col-sm-12 ">
 		<a href="/logout">Cerrar sesión</a>
 	</div>
 </div>
