--- a/src/main/resources/templates/registryInTable.html
+++ b/src/main/resources/templates/registryInTable.html
@@ -24,5 +24,6 @@
 		</main>
 	</div>
 	<footer th:insert="base/footer.html"> </footer>
+	<footer th:insert="base/scannerJS.html"> </footer>
 </body>
 </html>
