Add update notifications table once per minute

--- a/src/main/resources/templates/base/dataTables.html
+++ b/src/main/resources/templates/base/dataTables.html
@@ -1,3 +1,4 @@
 <script
 	src="http://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
 <script src="js/dataTables.js"></script>
+<script src="js/submitTime.js"></script>
