Shows notifications only when there are

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -81,6 +81,13 @@ h1 {
 	margin-top: 7%;
 }
 
+.mainNotifications {
+	background: white;
+	border: black 1px solid;
+	padding: 1%;
+	margin-top: 2%;
+}
+
 .intro {
 	margin-top: 5%;
 	font-size: 3em;
