--- a/src/main/resources/templates/mainWaiterView.html
+++ b/src/main/resources/templates/mainWaiterView.html
@@ -4,8 +4,8 @@
 <hr>
 <h2 class="intro">¿Qué puedes hacer en EatApp?</h2>
 <div class="row col-xl-11 offset-xl-1 col-lg-11 offset-lg-1">
-	<div class="column col-xl-12 col-lg-12 col-sm-12">
-		<div th:if="${notifications}">
+	<div th:if="${notifications}" class="mainNotifications column col-xl-11 col-lg-11 col-sm-11">
+			<h3>Mis notificaciones</h3>
 			<table id="notif" class="table table-striped display">
 				<thead>
 					<tr>
@@ -18,7 +18,6 @@
 					<td th:text="${notification.owner}" />
 				</tr>
 			</table>
-		</div>
 		<form id="notification" method="post" action="showNotification">
 			<div>
 				<button class="btn btn-success" type="submit">Ver mis
