--- a/src/main/resources/templates/mainCommensalView.html
+++ b/src/main/resources/templates/mainCommensalView.html
@@ -24,6 +24,10 @@
 	</div>
 	<div
 		class="column mainOptions col-xl-5 col-lg-5 offset-lg-1 col-sm-12 ">
+		<a href="/createOrder">Crear nuevo pedido</a>
+	</div>
+	<div
+		class="column mainOptions col-xl-5 col-lg-5 offset-lg-1 col-sm-12 ">
 		<a href="/logout">Cerrar sesión</a>
 	</div>
 </div>
