Includes CleanNotificationController & finishes ConfigureQuantities
CleanNotificationController is a new functionallity to remove Waiter
notifications when click on it.

TODO:
- Get better manageIngredientHtml to match the rest of the templates
- Test CleanNotification
- Think about hierarchy of controllers with get and post actions

--- a/src/main/resources/templates/mainCookView.html
+++ b/src/main/resources/templates/mainCookView.html
@@ -6,7 +6,7 @@
 <div class="row col-xl-11 offset-xl-1 col-lg-11 offset-lg-1">
 	<div
 		class="column mainOptions col-xl-5 col-lg-5 col-sm-12 float-md-center">
-		<a href="/registryInTable">Configurar compra</a>
+		<a href="/configureQuantityOfIngredients">Configurar cantidad minima de un ingrediente</a>
 	</div>
 	<div
 		class="column mainOptions col-xl-5 offset-xl-1 col-lg-5 offset-lg-1  col-sm-12">
@@ -17,7 +17,7 @@
 	</div>
 	<div
 		class="column mainOptions col-xl-5 col-lg-5 offset-lg-1 col-sm-12 ">
-		<a href="/logout">Cancelar producto</a>
+		<a href="/">Cancelar producto</a>
 	</div>
 	<div class="column mainOptions col-xl-5 col-lg-5 col-sm-12">
 		<a href="/">Gestionar status de producto</a>
