--- a/src/main/resources/templates/mainWaiterView.html
+++ b/src/main/resources/templates/mainWaiterView.html
@@ -4,18 +4,25 @@
 <hr>
 <h2 class="intro">¿Qué puedes hacer en EatApp?</h2>
 <div class="row col-xl-11 offset-xl-1 col-lg-11 offset-lg-1">
-	<div th:if="${notifications}" class="mainNotifications column col-xl-11 col-lg-11 col-sm-11">
+	<div class="mainNotifications column col-xl-11 col-lg-11 col-sm-11">
 			<h3>Mis notificaciones</h3>
-			<table id="notif" class="table table-striped display">
+			<table  th:if="${notifications}" id="notif" class="table table-striped display">
 				<thead>
 					<tr>
 						<th>Tipo</th>
 						<th>Mesa</th>
 					</tr>
 				</thead>
-				<tr th:each="notification: ${notifications}">
+				<tr th:if="${not #lists.isEmpty(notifications)}" th:each="notification: ${notifications}">
 					<td th:text="${notification.type}" />
-					<td th:text="${notification.owner}" />
+					<td>
+						<form id="notification" method="post" action="cleanNotification">
+							<button class="btn btn-sm btn-success" th:name="notificationId" type="submit" th:value="${notification.owner}" title='completar' th:text="${notification.owner}"> </button>
+						</form>
+					</td>
+				</tr>
+				<tr	th:if="${#lists.isEmpty(notifications)}">
+					<td>No hay notificaciones</td>
 				</tr>
 			</table>
 		<form id="notification" method="post" action="showNotification">
@@ -44,6 +51,6 @@
 
 <script>
 	window.setTimeout(function() {
-		document.getElementById("scanner").submit();
-	}, 60000);
+		document.getElementById("notification").submit();
+	}, 30000);
 </script>
