Updates manageIngredientHtml to match the rest of views templates TODO: - Make the request to update amount of ingredientes secure - Ingredients are not updating in view in real time

--- a/src/main/resources/templates/mainWaiterView.html
+++ b/src/main/resources/templates/mainWaiterView.html
@@ -6,7 +6,7 @@
 <div class="row col-xl-11 offset-xl-1 col-lg-11 offset-lg-1">
 	<div class="mainNotifications column col-xl-11 col-lg-11 col-sm-11">
 			<h3>Mis notificaciones</h3>
-			<table  th:if="${notifications}" id="notif" class="table table-striped display">
+			<table  th:if="${notifications}" id="dataTable" class="table table-striped display">
 				<thead>
 					<tr>
 						<th>Tipo</th>
