--- a/src/main/resources/templates/manageIngredient.html
+++ b/src/main/resources/templates/manageIngredient.html
@@ -27,7 +27,8 @@
 							name="newAmount" min="1" max="50" placeholder="Cantidad" /></td>
 						<td><button class="btn btn-success" type="submit">Confirmar</button></td>
 						<input type="hidden" name="ingredientId"
-							th:value="${ingredient.id}" /> <!--TODO SECURE THIS IN SERVER SIDE-->
+							th:value="${ingredient.id}" />
+						<!--TODO SECURE THIS IN SERVER SIDE-->
 						</form>
 					</tr>
 				</table>
