--- a/src/main/resources/templates/base/navbar.html
+++ b/src/main/resources/templates/base/navbar.html
@@ -9,21 +9,9 @@
 	</button>
 
 	<div class="collapse navbar-collapse" id="navbarsExampleDefault">
-		<ul class="navbar-nav mr-auto">
-			<li class="nav-item"><a class="nav-link" href="/testStatic.html">Test
-					Static</a></li>
-			<li class="nav-item"><a class="nav-link disabled" href="#">Disabled</a>
-			</li>
-			<li class="nav-item dropdown"><a
-				class="nav-link dropdown-toggle" href="http://example.com"
-				id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
-				aria-expanded="false">Dropdown</a>
-				<div class="dropdown-menu" aria-labelledby="dropdown01">
-					<a class="dropdown-item" href="#">Action</a> <a
-						class="dropdown-item" href="#">Another action</a> <a
-						class="dropdown-item" href="#">Something else here</a>
-				</div></li>
-		</ul>
+		<th:block th:switch="${session.type}">
+			<div th:case="'COMMENSAL'" th:insert="base/navbarCommensal.html"></div>
+		</th:block>
 		<ul th:if="${session.email}" class="navbar-nav ml-auto">
 			<li class="nav-item"><a
 				th:text="${session.email} + ' Cerrar sesión'" class="nav-link"
