--- a/src/main/resources/templates/mainCookView.html
+++ b/src/main/resources/templates/mainCookView.html
@@ -6,7 +6,8 @@
 <div class="row col-xl-11 offset-xl-1 col-lg-11 offset-lg-1">
 	<div
 		class="column mainOptions col-xl-5 col-lg-5 col-sm-12 float-md-center">
-		<a href="/configureQuantityOfIngredients">Configurar cantidad minima de un ingrediente</a>
+		<a href="/configureQuantityOfIngredients">Configurar cantidad
+			minima de un ingrediente</a>
 	</div>
 	<div
 		class="column mainOptions col-xl-5 offset-xl-1 col-lg-5 offset-lg-1  col-sm-12">
