--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -15,6 +15,7 @@
 					<p th:text="${error}"></p>
 				</div>
 			</div>
+			<div><a href="/">Volver</a></div>
 		</main>
 	</div>
 	<footer th:insert="base/footer.html"> </footer>
