--- a/src/main/resources/templates/mainAdminView.html
+++ b/src/main/resources/templates/mainAdminView.html
@@ -6,7 +6,11 @@
 <div class="row col-xl-11 offset-xl-1 col-lg-11 offset-lg-1">
 	<div
 		class="column mainOptions col-xl-5 col-lg-5 col-sm-12 float-md-center">
-		<a href="/">Registrar a un trabajador</a>
+		<a href="/registerEmployee">Registrar un trabajador</a>
+	</div>
+	<div
+		class="column mainOptions col-xl-5 col-lg-5 col-sm-12 float-md-center">
+		<a href="/removeEmployee">Eliminar un trabajador</a>
 	</div>
 	<div
 		class="column mainOptions col-xl-5 col-lg-5 offset-lg-1 col-sm-12 ">
