Includes full show ingredients amount UC

--- a/src/main/resources/templates/mainCookView.html
+++ b/src/main/resources/templates/mainCookView.html
@@ -21,7 +21,10 @@
 		<a href="/">Cancelar producto</a>
 	</div>
 	<div class="column mainOptions col-xl-5 col-lg-5 col-sm-12">
-		<a href="/">Gestionar status de producto</a>
+		<a href="/">Gestionar estado de producto</a>
+	</div>
+	<div class="column mainOptions col-xl-5 offset-xl-1 col-lg-5 col-sm-12">
+		<a href="/showIngredientsAmount">Ver cantidades de los ingredientes</a>
 	</div>
 	<div
 		class="column mainOptions col-xl-5 col-lg-5 offset-lg-1 col-sm-12 ">
