--- a/src/main/resources/templates/createNewOrder.html
+++ b/src/main/resources/templates/createNewOrder.html
@@ -9,10 +9,10 @@
 	<div class="page">
 		<main role="main" class="main container col-xl col-lg col-md col-sm">
 			<div class="starter-template">
-				<div th:unless="${session.order}">
-					<h2 class="intro">¿Qué te apetece?</h2>
+					<h2 th:unless="${session.orderInProgress}" class="intro">¿Qué te apetece?</h2>
+					<h2 th:if="${session.orderInProgress}" class="intro">Así dejaste tu pedido</h2>
 					<form formaction="createOrder" method="post">
-						<table th:if="${products}" id="dataTable"
+						<table th:if="${order.products}" id="dataTable"
 							class="table table-striped display">
 							<thead>
 								<tr>
@@ -22,53 +22,19 @@
 									<th>Cantidad</th>
 								</tr>
 							</thead>
-							<tr th:each="product: ${products}">
-								<td th:text="${product.name}" /></td>
-								<td th:text="${product.description}"></td>
-								<td th:text="${product.Price}"></td>
-								<td><input type="number" required="required" step="1"
-									name="amounts[]" min="0" max="50" value="0" /></td>
-								<input type="hidden" name="ids[]" th:value="${product.id}" />
-								<!--TODO SECURE THIS IN SERVER SIDE-->
-							</tr>
-						</table>
-						<div id="parameters">
-							<textarea name="parameters" rows="2" cols="140" maxlength="140"
-								placeholder="¿Quieres hacernos alguna indicación mas? Por ejemplo, el punto de la carne"></textarea>
-						</div>
-						<button class="btn btn-success" formaction="createOrder"
-							type="submit">Confirmar pedido</button>
-						<button class="btn btn-success" formaction="showNewOrder"
-							type="submit">Ver estado pedido</button>
-					</form>
-				</div>
-				<div th:if="${session.order}">
-					<h2 class="intro">Así dejaste tu pedido</h2>
-					<form formaction="createOrder" method="post">
-						<table th:if="${session.order.products}" id="dataTable"
-							class="table table-striped display">
-							<thead>
-								<tr>
-									<th>Producto</th>
-									<th>Descripción</th>
-									<th>Precio</th>
-									<th>Cantidad</th>
-								</tr>
-							</thead>
-							<tr th:each="product: ${session.order.products}">
+							<tr th:each="product: ${order.products}">
 								<td th:text="${product.key.name}" /></td>
 								<td th:text="${product.key.description}"></td>
 								<td th:text="${product.key.Price}"></td>
 								<td><input type="number" required="required" step="1"
 									name="amounts[]" min="0" max="50" th:value="${product.value}" /></td>
 								<input type="hidden" name="ids[]" th:value="${product.key.id}" />
-								<!--TODO SECURE THIS IN SERVER SIDE-->
 							</tr>
 						</table>
 						<div id="parameters">
 							<textarea name="parameters" rows="2" cols="140" maxlength="140"
 								placeholder="¿Quieres hacernos alguna indicación mas? Por ejemplo, el punto de la carne"
-								th:text="${session.order.parameters}"></textarea>
+								th:text="${order.parameters}"></textarea>
 						</div>
 						<button class="btn btn-success" formaction="createOrder"
 							type="submit">Confirmar pedido</button>
